Added smart input feature

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,3 +1,7 @@
+html {
+    overflow-x: hidden;
+}
+
 #app {
     font-family: Avenir, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -49,6 +53,15 @@
 .message.error::before {
     content: '⛔ ';
     text-decoration: none;
+}
+
+.scroll {
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.scroll::-webkit-scrollbar {
+    display: none;
 }
 
 input,
