--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,13 +1,11 @@
 html {
     overflow-x: hidden;
-}
-
-#app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #111111;
+    background: #ededed;
 }
 
 .v-enter-active,
@@ -21,7 +19,8 @@ html {
 }
 
 .container {
-    box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 15px 15px 30px #c9c9c9,
+        -15px -15px 30px #ffffff;
     border-radius: 1rem;
     padding: 2rem;
     margin: 2rem;
@@ -67,11 +66,13 @@ input,
 textarea,
 button,
 select {
+    font-family: 'Times New Roman', Times, serif;
     padding: 0.5rem;
     margin: 0.5rem;
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.2);
     border: none;
     border-radius: 0.5rem;
+    background: white;
 }
 
 input:disabled {
@@ -80,5 +81,6 @@ input:disabled {
 
 textarea {
     resize: none;
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
+
 }
