--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,11 +1,16 @@
 html {
     overflow-x: hidden;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Lato', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #111111;
     background: #ededed;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url(/assets/Lato.woff2);
 }
 
 .v-enter-active,
@@ -66,7 +71,7 @@ input,
 textarea,
 button,
 select {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Lato', sans-serif;
     padding: 0.5rem;
     margin: 0.5rem;
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.2);
@@ -81,6 +86,5 @@ input:disabled {
 
 textarea {
     resize: none;
-    font-family: 'Times New Roman', Times, serif;
-
+    font-family: 'Lato', sans-serif;
 }
