Added publishers list

--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -22,6 +22,19 @@
         </p>
     </div>
     <% } %>
+    <div class="footer">
+        <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> - More publications coming!
+        <!--
+        <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> -
+        <a target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</a> -
+        <a target="_blank" href="/api/public/publisher/wordsandthat">Words and That</a> -
+        <a target="_blank" href="/api/public/publisher/periodicals">Periodicals</a> -
+        <a target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</a> -
+        <a target="_blank" href="/api/public/publisher/axiom">Axiom</a> -
+        <a target="_blank" href="/api/public/publisher/thepostmen">The Postmen</a> -
+        <a target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</a>
+        -->
+    </div>
 </main>
 
 <style>
@@ -120,5 +133,25 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         margin-bottom: 0;
+    }
+
+    .footer {
+        border-top: solid 1px #ccc;
+        background-color: #e6e6e6;
+        font-size: 0.8rem;
+        margin: auto;
+        padding: 0.4rem 1rem;
+        color: #888;
+    }
+
+    .footer a {
+        text-decoration: none;
+        line-height: 1.2rem;
+        white-space: nowrap;
+        color: #444;
+    }
+
+    .footer a:hover {
+        text-decoration: underline;
     }
 </style>
