--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -114,8 +114,9 @@
     }
 
     .article .title {
+        display: block;
         font-size: 1.2rem;
-        margin-top: 0.2rem;
+        margin-top: 0.1rem;
         margin-bottom: 0;
         color: rgb(0, 90, 164);
         text-decoration: none;
@@ -126,7 +127,7 @@
     }
 
     .article .description {
-        margin-top: 0.2rem;
+        margin-top: 0.1rem;
         font-size: 0.8rem;
         height: 2.8rem;
         -webkit-line-clamp: 3;
