Fixed minor bug

--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -23,16 +23,16 @@
     </div>
     <% } %>
     <div class="footer">
-        <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> - More publications coming!
+        <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> - With invitations to:
+        <span target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</span> -
+        <span target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</span> -
+        <span target="_blank" href="/api/public/publisher/wordsandthat">Words and That</span> -
+        <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span> -
+        <span target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</span> -
+        <span target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</span>
         <!--
-        <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> -
-        <a target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</a> -
-        <a target="_blank" href="/api/public/publisher/wordsandthat">Words and That</a> -
-        <a target="_blank" href="/api/public/publisher/periodicals">Periodicals</a> -
-        <a target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</a> -
         <a target="_blank" href="/api/public/publisher/axiom">Axiom</a> -
         <a target="_blank" href="/api/public/publisher/thepostmen">The Postmen</a> -
-        <a target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</a>
         -->
     </div>
 </main>
