Make daily articles random

--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -23,16 +23,16 @@
     </div>
     <% } %>
     <div class="footer">
-        <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> - With invitations to:
-        <span target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</span> -
+        <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> -
+        <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> - With invitations to:
         <span target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</span> -
         <span target="_blank" href="/api/public/publisher/wordsandthat">Words and That</span> -
         <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span> -
-        <span target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</span> -
         <span target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</span>
         <!--
         <a target="_blank" href="/api/public/publisher/axiom">Axiom</a> -
         <a target="_blank" href="/api/public/publisher/thepostmen">The Postmen</a> -
+        <span target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</span> -
         -->
     </div>
 </main>
@@ -75,10 +75,11 @@
         font-size: 1.125rem;
         line-height: 1.14rem;
         font-weight: 600;
+        color: #FFF;
     }
 
     .header {
-        background-color: #e6e6e6;
+        background-color: #d64385;
         font-size: 1.125rem;
         font-weight: 600;
         color: #444;
