UI update based on feedback

--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -24,11 +24,11 @@
     <% } %>
     <div class="footer">
         <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> -
+        <a target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</a> -
         <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> - With invitations to:
         <span target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</span> -
         <span target="_blank" href="/api/public/publisher/wordsandthat">Words and That</span> -
-        <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span> -
-        <span target="_blank" href="/api/public/publisher/timelinemagazine">Timeline Magazine</span>
+        <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span>
         <!--
         <a target="_blank" href="/api/public/publisher/axiom">Axiom</a> -
         <a target="_blank" href="/api/public/publisher/thepostmen">The Postmen</a> -
