Add comment in embed

--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Problems with this embed? Contact Shawn Xu at shawn.xu@abingdon.org.uk -->
 <main>
     <div class="header">
         <h3 class="nowrap">Abingdon Publications</h3>
@@ -29,11 +30,6 @@
         <span target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</span> -
         <span target="_blank" href="/api/public/publisher/wordsandthat">Words and That</span> -
         <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span>
-        <!--
-        <a target="_blank" href="/api/public/publisher/axiom">Axiom</a> -
-        <a target="_blank" href="/api/public/publisher/thepostmen">The Postmen</a> -
-        <span target="_blank" href="/api/public/publisher/pupilvoicereport">Pupil Voice Report</span> -
-        -->
     </div>
 </main>
 
