--- a/server/views/embed.ejs
+++ b/server/views/embed.ejs
@@ -34,9 +34,9 @@
     <div class="footer">
         <a target="_blank" href="/api/public/publisher/themartlet">The Martlet</a> -
         <a target="_blank" href="/api/public/publisher/timeline">Timeline Magazine</a> -
-        <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> - With invitations to:
+        <a target="_blank" href="/api/public/publisher/thepolyglot">The Polyglot</a> -
+        <a target="_blank" href="/api/public/publisher/wordsandthat">Words and That</a> - With invitations to:
         <span target="_blank" href="/api/public/publisher/griffenomics">Griffenomics</span> -
-        <span target="_blank" href="/api/public/publisher/wordsandthat">Words and That</span> -
         <span target="_blank" href="/api/public/publisher/periodicals">Periodicals</span>
     </div>
 </main>
